# nimbus-face-recognition

./: .gitignore  LICENSE  Makefile  NOTES.md  README.md  pyproject.toml  run.py
eval/: detections.json  ground_truth.json  ground_truth_proposed.json  metrics.json  predictions.json  timeline.json
refs/: baseline_probe.json  calibration.json  embeddings.npz
scripts/: baseline_probe.py  build_references.py  diagnose_miss.py  evaluate.py  extract_eval_frames.py  fetch_weights.sh  gt_timeline.py  ingest_candidates.py  plot_distributions.py  validate_references.py  verify_phase1.py  verify_phase2.py  verify_phase3.py
src/nimbus/: __init__.py  detector.py  embedder.py  pipeline.py  recogniser.py  renderer.py  scene_cut.py  tracker.py  types.py
tests/: test_recogniser.py  test_scene_cut.py  test_tracker.py
